--- a/SpringBootTesting/build.gradle
+++ b/SpringBootTesting/build.gradle
@@ -43,9 +43,9 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
 	compile('org.springframework.boot:spring-boot-starter-web')
-    	compile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.springframework.boot:spring-boot-starter-test')
 	compile('org.apache.activemq:activemq-all:5.3.0')
-    	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile("org.springframework.boot:spring-boot-starter-data-mongodb")
 	//compile("org.springframework.boot:spring-boot-starter-security")
 	
@@ -60,5 +60,5 @@ dependencies {
    
 
 	testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
-    
+	testCompile group: 'com.github.fakemongo', name: 'fongo', version: '1.3.1'
 }
